Jump Start Changelog
====================

2.0.5 - XX/XX/XXXX
------------------

--------------------------------------------------------------

2.0.4 - 12/11/2015
------------------

* Improvement: Some frontend RTL fixes and improvements.
* Improvement: Admin RTL fixes and improvements.
* Improvement: Frontend post grid/showcase filtering now also effects navigating items in corresponding lightbox gallery.
* Improvement: Minor comment form styling adjustments for changes in WordPress 4.4+.
* Improvement: Now using `srcset` for HiDPI/Retina logo with no javascript, to match practices of WordPress 4.4+.
* Fixed: Dropdown menus not displaying when adding a parallax background image or video background to site header from theme options.
* Fixed: Post slider style #2 captions not displaying correctly.
* Fixed: Javascript conflicts with JetPack on Edit Page/Post screens.
* Fixed: Hero unit text not displaying above background video.
* Fixed: WPML-translated pages not allowing to save a unique, translated custom layout.
* Fixed: Display issues with new post embedding, introduced in WordPress 4.4.

--------------------------------------------------------------

2.0.3 - 11/10/2015
------------------

* New: Added compatibility for [Nav Menu Roles](https://wordpress.org/plugins/nav-menu-roles) plugin.
* Fixed: Banner Meta box display issue on Edit Page screen in admin.
* Fixed: Top padding issues when combining a transparent header, page banner and custom layout all on the same page.
* Fixed: Javascript error when no custom image specified for Google map marker.
* Fixed: Modal window not working with `[popup]` shortcode.
* Fixed: Sticky menu not displaying when adding a parallax background image to site header from theme options.

--------------------------------------------------------------

2.0.2 - 10/15/2015
------------------

* **Updated Theme Blvd framework to 2.5.2**
* New: Optional width and height scaling options for custom Google map marker images.