@@ -997,12 +997,16 @@
 }
 
 /* Inline code editor */
-#optionsframework .section-code .controls {
+#optionsframework .section-code .controls,
+.wp-admin.rtl #optionsframework .section-code .controls {
 	float: none;
 	min-width: 0;
 	margin-bottom: 10px;
 	padding: 0;
 	width: auto;
+}
+.wp-admin.rtl #optionsframework .section-code .controls {
+	direction: ltr;
 }
 #optionsframework .section-code .explain {
 	float: none;
